feat(shows): add pagination, search, filtering, and sorting